--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ NODE_ENV = production
 PORT = 3000
 
 DATABASE_URL = postgresql://postgres:BestPasswordEver@34.70.211.242:5432/MediaBuilding?schema=public
+# DATABASE_URL=postgresql://postgres:koribla1@localhost:5432/MediaBuilding?schema=public
 
 JWT_SECRET = &*!%#@$^**&()(*&ASGFYHV)A)(*DSF&*)
