--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 NODE_ENV = production
-PORT = 3000
+PORT = 4200
 
-DATABASE_URL = postgresql://postgres:BestPasswordEver@34.70.211.242:5432/NewMediaBuilding?schema=public
-# DATABASE_URL=postgresql://postgres:koribla1@localhost:5432/MediaBuilding?schema=public
+# DATABASE_URL = postgresql://postgres:BestPasswordEver@34.70.211.242:5432/NewMediaBuilding?schema=public
+DATABASE_URL=postgres://default:OQk83VNRAXyT@ep-cold-snowflake-28243986.eu-central-1.postgres.vercel-storage.com:5432/verceldb
 
 JWT_SECRET = &*!%#@$^**&()(*&ASGFYHV)A)(*DSF&*)
+
+GOOGLE_CLIENT_ID = 763769822735-90bk0cd8bq3p8hk2ikiianj0si5abefi.apps.googleusercontent.com
+GOOGLE_SECRET = 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
