--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ PORT = 4200
 REACT_APP_URL = http://82.97.243.54:3000
 
 # DATABASE_URL = postgresql://postgres:BestPasswordEver@34.70.211.242:5432/NewMediaBuilding?schema=public
-DATABASE_URL=postgres://default:OQk83VNRAXyT@ep-cold-snowflake-28243986.eu-central-1.postgres.vercel-storage.com:5432/verceldb
+# DATABASE_URL=postgres://default:OQk83VNRAXyT@ep-cold-snowflake-28243986.eu-central-1.postgres.vercel-storage.com:5432/verceldb
+DATABASE_URL = postgresql://gen_user:!Nf2s2bM6kLc@94.241.138.66:5432/default_db
 
 JWT_SECRET = &*!%#@$^**&()(*&ASGFYHV)A)(*DSF&*)
 
