--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV = production
 PORT = 4200
 
-REACT_APP_URL = https://media-building.ru
+REACT_APP_URL = http://82.97.243.54:3000
 
 # DATABASE_URL = postgresql://postgres:BestPasswordEver@34.70.211.242:5432/NewMediaBuilding?schema=public
 # DATABASE_URL=postgres://default:OQk83VNRAXyT@ep-cold-snowflake-28243986.eu-central-1.postgres.vercel-storage.com:5432/verceldb
